bug: found a big bug with adding and removing people from the views, I'm continuing to work through this

--- a/src/assets/styles/alertModule.scss
+++ b/src/assets/styles/alertModule.scss
@@ -1,5 +1,6 @@
 @import './library.scss';
 #custom_alert_overlay {
+    @include dark-overlay;
     #custom_alert {
         position: fixed;
         top: 2rem;
